# android-quick-settings

./: Cargo.toml  README.md  cli.js  package.json  quick-set.sh  quick-settings  quick-settings.sh  quick_settings.py
.github/workflows/: test.yml
src/: main.rs
