[package]
name = "android-quick-settings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aqs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
